fixes for layout issues on ie

--- a/src/main/webapp/netprof2.css
+++ b/src/main/webapp/netprof2.css
@@ -252,6 +252,18 @@ h1 {
     margin-right: 3px;
 }
 
+.wordSpacerRight {
+    margin-right: 4px;
+}
+
+.wordSpacerLeft {
+    margin-left: 4px;
+}
+
+.rtlMarginBottom {
+    margin-bottom: 7px;
+}
+
 .shareTitle {
     margin-right: 5px;
     padding-top: 6px;
